Bug 1601422 - Update output track sources synchronously when aborted by content. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D99936